--- a/nginx.conf
+++ b/nginx.conf
@@ -1,30 +1,62 @@
-# Nginx 配置文件示例，配置反向代理和 SSL
+user nginx;
+worker_processes auto;
+error_log /var/log/nginx/error.log;
+pid /run/nginx.pid;
 
-server {
-    listen 80;
-    server_name www.kegenai.com;
+# Load dynamic modules. See /usr/share/nginx/README.dynamic.
+include /usr/share/nginx/modules/*.conf;
 
-    location / {
-        proxy_pass http://localhost:5000;  # 将请求代理到后端服务的地址和端口
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
+events {
+    worker_connections 1024;
 }
 
-server {
-    listen 443 ssl;
-    server_name www.kegenai.com;
+http {
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    ssl_certificate /etc/letsencrypt/live/www.kegenai.com/fullchain.pem;  # 指定 SSL 证书和密钥的路径
-    ssl_certificate_key /etc/letsencrypt/live/www.kegenai.com/privkey.pem;
+    access_log  /var/log/nginx/access.log  main;
 
-    location / {
-        proxy_pass http://localhost:5000;  # 将请求代理到后端服务的地址和端口
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+    sendfile            on;
+    tcp_nopush          on;
+    tcp_nodelay         on;
+    keepalive_timeout   65;
+    types_hash_max_size 2048;
+
+    include             /etc/nginx/mime.types;
+    default_type        application/octet-stream;
+
+    # Load modular configuration files from the /etc/nginx/conf.d directory.
+    # See http://nginx.org/en/docs/ngx_core_module.html#include
+    # for more information.
+    include /etc/nginx/conf.d/*.conf;
+
+    server {
+        listen       80;
+        server_name  www.kegenai.com;
+
+        location / {
+            proxy_pass http://localhost:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name www.kegenai.com;
+
+        ssl_certificate /etc/letsencrypt/live/www.kegenai.com/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/www.kegenai.com/privkey.pem;
+
+        location / {
+            proxy_pass http://localhost:5000;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
     }
 }
